--- a/resizable.css
+++ b/resizable.css
@@ -3,12 +3,8 @@
 }
 
 .resizable {
-    /* display: inline-block; */
-    /* line-height: 0; */
-
     display: var(--display);
     position: relative;
-
 }
 
 .resizable table {
@@ -19,7 +15,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0,255,0,0.5);     */
 }
 
 .resizable table .c {
@@ -59,13 +54,24 @@
 
 .resizable table td {
     padding: 5px;
-    /* outline: 1px solid red;   */
 }
 
-/* .resizable table td:hover {
+
+/* Debug Styles */
+
+
+/* .resizable table {
+    background-color: rgba(0,255,0,0.5);    
+}
+
+.resizable table td {
+    outline: 1px solid red;  
+}
+
+.resizable table td:hover {
     background-color: blue;
 } 
 
 .resizable table td.mc:hover {
     background: none;
-}*/
+} */
