fix tables, position and margin

--- a/src/set-resizable.css
+++ b/src/set-resizable.css
@@ -7,9 +7,10 @@
     position: relative;
     min-width: var(--resizable-min-size);
     min-height: var(--resizable-min-size);
+    overflow: visible;
 }
 
-.resizable table {
+.resizable .control {
     border-collapse: collapse;
     border: 1px solid var(--resizable-color);
     position: absolute;
@@ -19,12 +20,12 @@
     height: 100%;
 }
 
-.resizable table .c {
+.resizable .control .c {
     width: 100%;
     height: 100%;
 }
 
-.resizable table .c span.info {
+.resizable .control .c span.info {
     color: #fff;
     background-color: var(--resizable-color);
     padding: 3px;
@@ -34,27 +35,27 @@
     right: 15px;
 }
 
-.resizable table .w:hover,
-.resizable table .e:hover {
+.resizable .control .w:hover,
+.resizable .control .e:hover {
     cursor: ew-resize;
 }
 
-.resizable table .s.e:hover,
-.resizable table .n.w:hover {
+.resizable .control .s.e:hover,
+.resizable .control .n.w:hover {
     cursor: nwse-resize;
 }
 
-.resizable table .s:hover,
-.resizable table .n:hover {
+.resizable .control .s:hover,
+.resizable .control .n:hover {
     cursor: ns-resize;
 }
 
-.resizable table .n.e:hover,
-.resizable table .s.w:hover {
+.resizable .control .n.e:hover,
+.resizable .control .s.w:hover {
     cursor: nesw-resize;
 }
 
-.resizable table td {
+.resizable .control td {
     padding: 5px;
     text-align: center;
 }
@@ -62,7 +63,7 @@
 
 /* Nodes */
 
-.resizable table.nodes td::after{
+.resizable .control.nodes td::after{
     content:"";
     display:inline-block;
     width: 10px;
@@ -72,23 +73,23 @@
     position: absolute;
 }
 
-.resizable table.nodes td.c::after{
+.resizable .control.nodes td.c::after{
     display: none;
 }
 
-.resizable table.nodes td.w::after{
+.resizable .control.nodes td.w::after{
     margin-left: -10px;
 }
 
-.resizable table.nodes td.n::after{
+.resizable .control.nodes td.n::after{
     margin-top: -10px;
 }
 
-.resizable table.nodes td.e::after{
+.resizable .control.nodes td.e::after{
     margin-right: -10px;
 }
 
-.resizable table.nodes td.s::after{
+.resizable .control.nodes td.s::after{
     margin-bottom: -10px;
 }
 
@@ -97,18 +98,18 @@
 /* Debug Styles */
 
 
-/* .resizable table {
+/* .resizable .control {
     background-color: rgba(0,255,0,0.5);    
 }
 
-.resizable table td {
+.resizable .control td {
     outline: 1px solid red;  
 }
 
-.resizable table td:hover {
+.resizable .control td:hover {
     background-color: blue;
 } 
 
-.resizable table td.mc:hover {
+.resizable .control td.mc:hover {
     background: none;
 } */
